[package]
name = "radio_beno"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serenity = { version = "0.12.2", features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "http",
    "rustls_backend",
] }
symphonia = { version = "0.5.4", features = ["aac", "mp3", "flac", "ogg"] }
reqwest = { version = "0.11.27" }
poise = { version = "0.6.1" }
songbird = { version = "0.4.3", features = ["serenity"] }
dotenvy = { version = "0.15.7" }
